--- a/src/app/_pages/users/users.component.html
+++ b/src/app/_pages/users/users.component.html
@@ -1,1 +1,84 @@
-<p>users works!</p>
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+
+    <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+        <ng-container *ngIf="column !== 'action' && column !== 'companyName'; else action">
+            <th mat-header-cell *matHeaderCellDef> {{column | titlecase}} </th>
+            <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+        </ng-container>
+        <ng-container *ngIf="column == 'companyName'">
+            <th mat-header-cell *matHeaderCellDef> {{column | titlecase}} </th>
+            <td mat-cell *matCellDef="let element"> {{element.company?.name}} </td>
+        </ng-container>
+        <ng-template #action>
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon
+                    (click)="expandedElement = expandedElement === element ? null : element;elementValue(element)">{{expandedElement
+                    ===
+                    element ? 'expand_less' : 'expand_more'}}</mat-icon>
+            </td>
+        </ng-template>
+    </ng-container>
+
+    <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+    <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+            <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                <div class="user-options">
+                    <div class="opt-box">
+                        <ng-container>
+                            <label>{{'firstName' | titlecase}}</label>
+                            <input matInput placeholder="Ex. Pizza" [value]="element['firstName']"
+                                [(ngModel)]="firstName">
+                            <span *ngIf="firstName == ''" class="user-validation">First Name is Required</span>
+                        </ng-container>
+                    </div>
+
+
+                    <div class="opt-box">
+                        <ng-container>
+                            <label>{{'phone' | titlecase}}</label>
+                            <input matInput placeholder="Ex. Pizza" [value]="element['phone']" [(ngModel)]="phone">
+                            <span *ngIf="phone == ''" class="user-validation">Phone is Required</span>
+                        </ng-container>
+                    </div>
+
+                    <div class="opt-box">
+                        <ng-container>
+                            <label>{{'weight' | titlecase}}</label>
+                            <input matInput type="number" min="0" placeholder="Ex. Pizza" [value]="element['weight']"
+                                [(ngModel)]="weight">
+                            <span *ngIf="weight == 0 || weight == null" class="user-validation">Weight is
+                                Required</span>
+                        </ng-container>
+                    </div>
+                    <div class="opt-box">
+                        <ng-container>
+                            <label>{{'companyName' | titlecase}}</label>
+                            <input matInput placeholder="Ex. Pizza" [value]="element['company'].name"
+                                [(ngModel)]="companyName">
+                            <span *ngIf="companyName == ''" class="user-validation">Company Name is Required</span>
+                        </ng-container>
+                    </div>
+                </div>
+
+                <div class="user-opt-btn">
+                    <button mat-raised-button [disabled]="element.loading" color="primary" (click)="saveData(element)">
+                        <ng-container *ngIf="!element.loading">Save</ng-container>
+                        <mat-icon *ngIf="element.loading" class="user-opt-spinner"><mat-spinner color="accent"
+                                diameter="15">
+                            </mat-spinner></mat-icon>
+                    </button>
+                    <button mat-raised-button (click)="cancelUserUpdate()">Cancel</button>
+                </div>
+
+            </div>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+        [class.example-expanded-row]="expandedElement === element">
+    </tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+</table>
